--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "ali-oss": "^4.14.2",
     "co": "^4.6.0",
+    "feedparser": "^2.2.9",
     "form-data": "^2.3.1",
     "fs-extra": "^5.0.0",
     "highlight.js": "^9.12.0",
@@ -37,6 +38,7 @@
     "push-to-firekylin": "^0.2.3",
     "qiniu": "^7.1.2",
     "request": "^2.83.0",
+    "request-promise-native": "^1.0.5",
     "semver": "^5.5.0",
     "speakeasy": "^2.0.0",
     "think-cache": "^1.0.0",
