--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   ],
   "dependencies": {
     "ali-oss": "^4.14.2",
+    "aws-sdk": "^2.263.1",
     "co": "^4.6.0",
     "feedparser": "^2.2.9",
     "form-data": "^2.3.1",
