--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node development.js",
     "copy-package": "node bin/copy_package.js",
-    "webpack": "webpack --watch",
+    "webpack": "webpack --watch --progress --hot",
+    "build": "rimraf www/static/js && cross-env NODE_ENV=prod webpack",
     "analyzer": "cross-env NODE_ENV=analyzer npm run webpack",
     "webpack.build": "webpack",
     "webpack.build.production": "webpack --config=webpack.production.config.js",
@@ -61,6 +62,7 @@
   },
   "devDependencies": {
     "@types/react": "^16.4.7",
+    "antd": "^3.7.3",
     "ava": "^0.18.0",
     "axios": "^0.18.0",
     "babel-cli": "6.x.x",
@@ -86,6 +88,7 @@
     "file-loader": "^1.1.11",
     "history": "^1.17.0",
     "html-webpack-plugin": "^3.2.0",
+    "less-loader": "^4.1.0",
     "md5": "^2.0.0",
     "mobx": "^5.0.3",
     "nyc": "^7.0.0",
@@ -115,6 +118,7 @@
     "style-loader": "^0.13.0",
     "superagent": "^1.7.2",
     "think-watcher": "^3.0.0",
+    "ts-import-plugin": "^1.5.4",
     "ts-loader": "^4.4.2",
     "tslint": "^5.11.0",
     "tslint-loader": "^3.6.0",
