refactor(app): add mobx

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node development.js",
     "copy-package": "node bin/copy_package.js",
-    "webpack": "webpack --watch --progress --hot",
+    "webpack": "rimraf www/static/js && webpack --watch --progress --hot",
     "build": "rimraf www/static/js && cross-env NODE_ENV=prod webpack",
     "analyzer": "cross-env NODE_ENV=analyzer npm run webpack",
     "webpack.build": "webpack",
@@ -61,7 +61,11 @@
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
+    "@types/history": "^4.7.0",
+    "@types/node": "^10.5.6",
     "@types/react": "^16.4.7",
+    "@types/react-router": "^4.0.30",
+    "@types/react-router-dom": "^4.3.0",
     "antd": "^3.7.3",
     "ava": "^0.18.0",
     "axios": "^0.18.0",
@@ -86,11 +90,12 @@
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-react": "^6.10.3",
     "file-loader": "^1.1.11",
-    "history": "^1.17.0",
+    "history": "^4.7.2",
     "html-webpack-plugin": "^3.2.0",
     "less-loader": "^4.1.0",
     "md5": "^2.0.0",
     "mobx": "^5.0.3",
+    "mobx-react": "^5.2.3",
     "nyc": "^7.0.0",
     "pre-commit": "^1.2.2",
     "qrcode-react": "0.1.14",
@@ -103,6 +108,7 @@
     "react-dom": "^16.4.2",
     "react-mixin": "^3.0.3",
     "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-ui-tree": "^2.6.0",
     "request": "^2.87.0",
     "request-promise-native": "^1.0.5",
@@ -121,7 +127,9 @@
     "ts-import-plugin": "^1.5.4",
     "ts-loader": "^4.4.2",
     "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.14.0",
     "tslint-loader": "^3.6.0",
+    "tslint-react": "^3.6.0",
     "typescript": "^3.0.1",
     "url-loader": "^1.0.1",
     "webpack": "^4.16.4",
