--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "file-loader": "^1.1.11",
     "history": "^4.7.2",
     "html-webpack-plugin": "^3.2.0",
+    "less": "^3.8.0",
     "less-loader": "^4.1.0",
     "md5": "^2.0.0",
     "mobx": "^5.0.3",
