--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@types/history": "^4.7.0",
     "@types/node": "^10.5.6",
     "@types/react": "^16.4.7",
+    "@types/react-dom": "^16.0.7",
     "@types/react-router": "^4.0.30",
     "@types/react-router-dom": "^4.3.0",
     "antd": "^3.7.3",
