--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   "devDependencies": {
     "@types/classnames": "^2.2.6",
     "@types/history": "^4.7.0",
+    "@types/moment": "^2.13.0",
     "@types/node": "^10.5.6",
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.7",
