feat(admin/editor): add tag

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
-    "experimentalDecorators": true
+    "allowSyntheticDefaultImports": true,
+    "experimentalDecorators": true,
   },
   "exclude": [
     "node_modules",
