feat(admin/theme): finish theme page

--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "babel-preset-stage-0": "6.x.x",
     "babel-preset-stage-1": "^6.5.0",
     "classnames": "^2.2.6",
-    "codemirror": "^5.26.0",
+    "codemirror": "^5.40.0",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "eslint": "^4.2.0",
@@ -110,6 +110,7 @@
     "rc-select": "^5.10.0",
     "react": "^16.4.2",
     "react-codemirror": "^0.3.0",
+    "react-codemirror2": "^5.1.0",
     "react-color": "^2.14.1",
     "react-datetime": "^2.13.0",
     "react-dom": "^16.4.2",
