--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "file-loader": "^1.1.11",
     "history": "^4.7.2",
     "html-webpack-plugin": "^3.2.0",
+    "immutability-helper": "^2.8.1",
     "less": "^3.8.0",
     "less-loader": "^4.1.0",
     "md5": "^2.0.0",
@@ -113,6 +114,8 @@
     "react-codemirror2": "^5.1.0",
     "react-color": "^2.14.1",
     "react-datetime": "^2.13.0",
+    "react-dnd": "^5.0.0",
+    "react-dnd-html5-backend": "^5.0.1",
     "react-dom": "^16.4.2",
     "react-mixin": "^3.0.3",
     "react-router": "^4.3.1",
