feat(admin/options/2fa): finish 2fa page

--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@types/history": "^4.7.0",
     "@types/moment": "^2.13.0",
     "@types/node": "^10.5.6",
+    "@types/qrcode.react": "^0.8.1",
     "@types/react": "^16.4.7",
     "@types/react-codemirror": "^1.0.2",
     "@types/react-dom": "^16.0.7",
@@ -107,6 +108,7 @@
     "nyc": "^7.0.0",
     "pre-commit": "^1.2.2",
     "qrcode-react": "0.1.14",
+    "qrcode.react": "^0.8.0",
     "raw-loader": "^0.5.1",
     "rc-select": "^5.10.0",
     "react": "^16.4.2",
