build(webpack): add ts-import-plugin lib & delete sweetalert2

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "copy-package": "node bin/copy_package.js",
     "webpack": "rimraf www/static/js && webpack --watch --progress",
     "build": "rimraf www/static/js && cross-env NODE_ENV=prod webpack",
-    "analyzer": "cross-env NODE_ENV=analyzer npm run webpack",
+    "analyzer": "cross-env NODE_ENV=analyzer webpack --watch --progress",
     "webpack.build": "webpack",
     "webpack.build.production": "webpack --config=webpack.production.config.js",
     "lint": "eslint ./src ./*.js ./www/*.js ./www/static/src ./www/theme/firekylin --ignore-path .gitignore --cache -f table --ext .js,.jsx || true",
@@ -135,7 +135,6 @@
     "stc-uglify": "^1.0.1",
     "style-loader": "^0.13.0",
     "superagent": "^1.7.2",
-    "sweetalert2": "6.9.1",
     "think-watcher": "^3.0.0",
     "ts-import-plugin": "^1.5.4",
     "ts-loader": "^4.4.2",
