--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "phpass": "^0.1.1",
     "push-to-firekylin": "^0.2.3",
     "qiniu": "^7.1.2",
+    "react-loadable": "^5.5.0",
     "semver": "^5.5.0",
     "speakeasy": "^2.0.0",
     "think-cache": "^1.0.0",
@@ -71,6 +72,7 @@
     "@types/react": "^16.4.7",
     "@types/react-codemirror": "^1.0.2",
     "@types/react-dom": "^16.0.7",
+    "@types/react-loadable": "^5.4.1",
     "@types/react-router": "^4.0.30",
     "@types/react-router-dom": "^4.3.0",
     "antd": "^3.7.3",
