--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ali-oss": "^4.14.2",
     "aws-sdk": "^2.263.1",
     "co": "^4.6.0",
+    "cos-nodejs-sdk-v5": "^2.4.12",
     "feedparser": "^2.2.9",
     "form-data": "^2.3.1",
     "fs-extra": "^5.0.0",
