--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "6.x.x",
     "babel-polyfill": "^6.7.4",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "6.x.x",
