fix npm scripts

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "webpack": "rimraf www/static/js && webpack --watch --progress",
     "build": "rimraf www/static/js && cross-env NODE_ENV=prod webpack",
     "analyzer": "cross-env NODE_ENV=analyzer webpack --watch --progress",
-    "webpack.build": "webpack",
-    "webpack.build.production": "webpack --config=webpack.production.config.js",
+    "webpack.build": "npm run webpack --",
+    "webpack.build.production": "npm run build --",
     "lint": "eslint ./src ./*.js ./www/*.js ./www/static/src ./www/theme/firekylin --ignore-path .gitignore --cache -f table --ext .js,.jsx || true",
     "lint-fix": "eslint ./src ./*.js ./www/*.js ./www/static/src ./www/theme/firekylin --ignore-path .gitignore -f table --ext .js,.jsx --fix || true",
     "lint-break-on-errors": "echo '\n[INFO] Running ESLint...\n[INFO] (Autofix with `npm run lint-fix`)' && eslint ./src ./*.js ./www/*.js ./www/static/src ./www/theme/firekylin --ignore-path .gitignore -f table --ext .js,.jsx",
