--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-ui-tree": "^4.0.0",
+    "rimraf": "^2.6.2",
     "rxjs": "^6.2.2",
     "stc": "^2.0.14",
     "stc-css-combine": "^1.0.1",
