--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "build/dist",
-    "module": "ESNext",
+    "module": "esnext",
     "target": "es5",
     "lib": ["es7", "dom"],
     "sourceMap": true,
