--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "phpass": "^0.1.1",
     "push-to-firekylin": "^0.2.3",
     "qiniu": "^7.1.2",
+    "react-hot-loader": "^4.7.2",
     "react-loadable": "^5.5.0",
     "request": "^2.87.0",
     "request-promise-native": "^1.0.5",
+    "rxjs-hooks": "^0.4.0",
     "semver": "^5.5.0",
     "speakeasy": "^2.0.0",
     "think-cache": "^1.0.0",
@@ -71,14 +73,14 @@
     "@types/moment": "^2.13.0",
     "@types/node": "^10.5.6",
     "@types/qrcode.react": "^0.8.1",
-    "@types/react": "^16.4.7",
+    "@types/react": "^16.8.5",
     "@types/react-codemirror": "^1.0.2",
     "@types/react-color": "^2.13.6",
-    "@types/react-dom": "^16.0.7",
+    "@types/react-dom": "^16.8.2",
     "@types/react-loadable": "^5.4.1",
     "@types/react-router": "^4.0.30",
     "@types/react-router-dom": "^4.3.0",
-    "antd": "^3.7.3",
+    "antd": "^3.13.6",
     "ava": "^0.18.0",
     "axios": "^0.18.0",
     "babel-cli": "6.x.x",
@@ -116,7 +118,7 @@
     "qrcode.react": "^0.8.0",
     "raw-loader": "^0.5.1",
     "rc-select": "^5.10.0",
-    "react": "^16.4.2",
+    "react": "^16.8.3",
     "react-codemirror2": "^5.1.0",
     "react-color": "^2.14.1",
     "react-datetime": "^2.13.0",
