--- a/package.json
+++ b/package.json
@@ -44,10 +44,9 @@
     "push-to-firekylin": "^0.2.3",
     "qiniu": "^7.1.2",
     "react-hot-loader": "^4.7.2",
-    "react-loadable": "^5.5.0",
     "request": "^2.87.0",
     "request-promise-native": "^1.0.5",
-    "rxjs-hooks": "^0.4.0",
+    "rxjs-hooks": "^0.4.1",
     "semver": "^5.5.0",
     "speakeasy": "^2.0.0",
     "think-cache": "^1.0.0",
@@ -77,11 +76,10 @@
     "@types/react-codemirror": "^1.0.2",
     "@types/react-color": "^2.13.6",
     "@types/react-dom": "^16.8.2",
-    "@types/react-loadable": "^5.4.1",
-    "@types/react-router": "^4.0.30",
-    "@types/react-router-dom": "^4.3.0",
+    "@types/react-router": "^4.4.5",
+    "@types/react-router-dom": "^4.3.1",
     "antd": "^3.13.6",
-    "ava": "^0.18.0",
+    "ava": "^1.4.1",
     "axios": "^0.18.0",
     "babel-cli": "6.x.x",
     "babel-core": "6.x.x",
@@ -113,7 +111,7 @@
     "md5": "^2.0.0",
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
-    "nyc": "^7.0.0",
+    "nyc": "^13.3.0",
     "pre-commit": "^1.2.2",
     "qrcode.react": "^0.8.0",
     "raw-loader": "^0.5.1",
@@ -126,8 +124,8 @@
     "react-dnd-html5-backend": "^5.0.1",
     "react-dom": "^16.4.2",
     "react-mixin": "^3.0.3",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
     "react-ui-tree": "^4.0.0",
     "rimraf": "^2.6.2",
     "rxjs": "^6.2.2",
@@ -140,17 +138,17 @@
     "stc-resource-version": "^1.0.0",
     "stc-uglify": "^1.0.1",
     "style-loader": "^0.13.0",
-    "superagent": "^1.7.2",
+    "superagent": "^5.0.2",
     "think-watcher": "^3.0.0",
-    "ts-import-plugin": "^1.5.4",
-    "ts-loader": "^4.4.2",
-    "tslint": "^5.11.0",
+    "ts-import-plugin": "^1.5.5",
+    "ts-loader": "^5.3.3",
+    "tslint": "^5.15.0",
     "tslint-config-prettier": "^1.14.0",
-    "tslint-loader": "^3.6.0",
+    "tslint-loader": "^3.5.4",
     "tslint-react": "^3.6.0",
-    "typescript": "^3.0.1",
+    "typescript": "^3.4.1",
     "url-loader": "^1.0.1",
-    "webpack": "^4.20.2",
+    "webpack": "~4.20.2",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
