--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "firekylin",
+  "bin": "pkg.js",
   "description": "A Simple & Fast Node Bloging Platform Base On ThinkJS 3.x & ReactJS & ES2015+",
   "version": "1.2.8",
   "author": "lizheming <i@imnerd.org>",
@@ -16,7 +17,8 @@
     "lint-break-on-errors": "echo '\n[INFO] Running ESLint...\n[INFO] (Autofix with `npm run lint-fix`)' && eslint ./src ./*.js ./www/*.js ./www/static/src ./www/theme/firekylin --ignore-path .gitignore -f table --ext .js,.jsx",
     "check-extraneous-pkgs": "npm list --depth=0 && echo '[SUCCESS] No extraneous packages.' || (echo '[INFO] Pruning extraneous packages...\n' && npm prune)",
     "cron:rss": "npm start -- \"admin/cron/rss\"",
-    "cron:comment": "npm start -- \"crontab/sync_comment\""
+    "cron:comment": "npm start -- \"crontab/sync_comment\"",
+    "build:pkg": "pkg . --out-path=dist/"
   },
   "pre-commit": [
     "lint-break-on-errors"
@@ -42,7 +44,7 @@
     "on-finished": "^2.3.0",
     "phpass": "^0.1.1",
     "push-to-firekylin": "^0.2.3",
-    "qiniu": "^7.1.2",
+    "qiniu": "^7.3.0",
     "react-hot-loader": "^4.7.2",
     "request": "^2.87.0",
     "request-promise-native": "^1.0.5",
@@ -59,7 +61,7 @@
     "think-session-file": "^1.0.5",
     "think-view": "^1.0.0",
     "think-view-nunjucks": "^1.0.1",
-    "thinkjs": "^3.0.0",
+    "thinkjs": "^3.2.11",
     "to-markdown": "^3.1.1",
     "upyun": "^3.3.4",
     "wxr": "^0.1.2",
@@ -173,5 +175,18 @@
     "cacheTemplatePath": "/Users/lizheming/.think-templates/-usr-local-lib-node_modules-think-cli-default_template",
     "clone": false,
     "isMultiModule": true
+  },
+  "pkg": {
+    "assets": [
+      "src/**/*",
+      "view/**/*",
+      "www/**/*",
+      ".installed"
+    ],
+    "targets": [
+      "node10-linux-x64",
+      "node10-macos-x64",
+      "node10-win-x64"
+    ]
   }
 }
