--- a/package.json
+++ b/package.json
@@ -142,6 +142,7 @@
     "style-loader": "^0.13.0",
     "superagent": "^5.0.2",
     "think-watcher": "^3.0.0",
+    "tiny-pinyin": "^1.3.0",
     "ts-import-plugin": "^1.5.4",
     "ts-loader": "^4.4.2",
     "tslint": "^5.11.0",
