--- a/package.json
+++ b/package.json
@@ -54,8 +54,9 @@
     "think-cache": "^1.0.0",
     "think-cache-file": "^1.0.8",
     "think-logger3": "^1.0.0",
-    "think-model": "^1.2.2",
+    "think-model": "^1.5.4",
     "think-model-mysql": "^1.0.0",
+    "think-model-postgresql": "^1.1.6",
     "think-router-rest": "^1.0.4",
     "think-session": "^1.1.3",
     "think-session-file": "^1.0.5",
